# ipharobot_volume4

./: LICENSE  README.md
ipharobotv4/: CMakeLists.txt  package.xml
ipharobotv4_bootstrap/: CMakeLists.txt  package.xml
ipharobotv4_bootstrap/launch/: ipharobotv4.launch  ipharobotv4_camera.launch  ipharobotv4_core.launch  ipharobotv4_lidar.launch  ipharobotv4_model.launch  ipharobotv4_remote.launch
ipharobotv4_bootstrap/launch/includes/: ipharobotv4_description.urdf
ipharobotv4_bootstrap/scripts/: create_udev_rules
ipharobotv4_bootstrap/src/: ipharobotv4_diagnostics.cpp
ipharobotv4_description/: CMakeLists.txt  package.xml
ipharobotv4_description/rviz/: model.rviz
ipharobotv4_description/urdf/: ipharobotv4.urdf.xacro  ipharobotv4_base.xacro  ipharobotv4_camera.xacro  ipharobotv4_camera01.xacro  ipharobotv4_imu.xacro  ipharobotv4_inertia.xacro  ipharobotv4_lidar.xacro  ipharobotv4_skid_steer.xacro  ipharobotv4_wheel.xacro
ipharobotv4_msgs/: CMakeLists.txt  package.xml
ipharobotv4_msgs/msg/: SensorState.msg  VersionInfo.msg
ipharobotv4_navigation/: CMakeLists.txt  package.xml
ipharobotv4_navigation/launch/: amcl.launch  ipharobotv4_configuration.launch  move_base.launch  navigation.launch  navigation02.launch
ipharobotv4_navigation/maps/: map.pgm  map.yaml
ipharobotv4_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  manual_drive.yaml  move_base_params.yaml
ipharobotv4_navigation/rviz/: ipharobotv4_navigation.rviz  ipharobotv4_navigation_02.rviz  ipharobotv4_navigation_03rviz.rviz
ipharobotv4_simulation/: CMakeLists.txt  package.xml
ipharobotv4_simulation/launch/: empty_world.launch  raceway.launch  rviz.launch  rviz_standalone.launch  spawn.launch  workhouse.launch
ipharobotv4_simulation/rviz/: urdf02.rviz  urdf_depth_camera.rviz  urdf_multicamera.rviz
ipharobotv4_simulation/worlds/: empty.world  raceway.world  workhouse.world
ipharobotv4_slam/: CMakeLists.txt  package.xml
ipharobotv4_slam/config/: gmapping_params.yaml  ipharobotv4_lds_2d_gazebo.lua
ipharobotv4_slam/launch/: ipharobotv4_gmapping.launch  ipharobotv4_slam.launch  raceway_slam.launch  (+1 more)
ipharobotv4_teleop/: CMakeLists.txt  package.xml  setup.py
ipharobotv4_teleop/launch/: ipharobotv4_teleop.launch
ipharobotv4_teleop/nodes/: ipharobot_teleop_key
(+1 files in other folders)
